plugins {
    id 'eclipse'
    id 'application'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

group = 'com.polydes'
version = '0.0.1'

sourceSets {
    main {
        java {
            srcDir 'src'
        }
        resources {
            srcDir 'res'
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url "https://www.stencyl.com/dl/maven2/releases"
    }
    maven {
        url "https://www.stencyl.com/dl/maven2/snapshots"
    }
}

dependencies {
    //Stencyl and its dependencies
    implementation enforcedPlatform('com.stencyl:stencyl-platform:4.2.0')
    implementation group: 'com.stencyl',                    name: 'stencyl',      version: '4.2.0'
    implementation group: 'org.apache.commons',             name: 'commons-lang3'
    implementation group: 'ch.qos.reload4j',                name: 'reload4j'
    implementation group: 'commons-io',                     name: 'commons-io'
    implementation group: 'org.json',                       name: 'json'
    implementation group: 'com.esotericsoftware.yamlbeans', name: 'yamlbeans'
    implementation group: 'com.stencyl',                    name: 'filetree-indexer'
    implementation group: 'com.stencyl',                    name: 'jide-oss'
    implementation group: 'com.formdev',                    name: 'flatlaf'
    implementation group: 'com.formdev',                    name: 'flatlaf-extras'
    implementation group: 'net.java.dev.jna',               name: 'jna-platform'
    implementation group: 'com.fifesoft',                   name: 'rsyntaxtextarea'
    implementation group: 'com.stencyl',                    name: 'macwidgets'
    implementation group: 'com.github.mizosoft.methanol',   name: 'methanol'
    implementation group: 'com.jcraft',                     name: 'jsch',             version: '0.1.53'
    implementation group: 'commons-net',                    name: 'commons-net',      version: '3.4'
    implementation group: 'org.eclipse.jgit',               name: 'org.eclipse.jgit', version: '5.13.0.202109080827-r'
    implementation group: 'org.eclipse.jgit',    name: 'org.eclipse.jgit.ssh.apache', version: '5.13.0.202109080827-r'
    implementation group: 'org.tomlj',                      name: 'tomlj',            version: '1.0.0'
}

application {
    mainClass = "com.polydes.repman.ui.RepmanMain"
}
